<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostNoteActivity">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:ems="10"
        android:hint="@string/content_hint"
        android:inputType="textMultiLine"
        />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContent"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:text="@string/save_btn"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
         />

</android.support.constraint.ConstraintLayout>